@@ -1,4 +1,4 @@
 version=4
-opts="dversionmangle=s/(.*)\+dfsg(.?\d+)?$/$1.$2/,\
-repacksuffix=+dfsg" \
+opts="dversionmangle=s/(.*)\+dfsg(.?\d+)?$/$1$2/,\
+repacksuffix=+dfsg,repack,compression=xz" \
 https://www.seasip.info/Unix/LibDsk/ .*/libdsk-(\d\S+)\.tar\.gz
